# iced_drop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/color/: CHANGELOG.md  Cargo.toml
examples/color/src/: main.rs
examples/todo/: CHANGELOG.md  Cargo.toml
examples/todo/src/: highlight.rs  main.rs  operation.rs  theme.rs  tree.rs
examples/todo/src/theme/: button.rs  container.rs  text.rs  text_input.rs
src/: lib.rs
src/widget/: droppable.rs
src/widget/operation/: drop.rs
